--- a/conf/application.conf
+++ b/conf/application.conf
@@ -323,6 +323,7 @@ play.filters {
 play.evolutions {
   # You can disable evolutions for a specific datasource if necessary
   #db.default.enabled = false
+  db.workdb.enabled = false
 }
 
 ## Database Connection Pool
@@ -335,8 +336,8 @@ play.evolutions {
 play.db {
   # The combination of these two settings results in "db.default" as the
   # default JDBC pool:
-  #config = "db"
-  #default = "default"
+  config = "db"
+  default = "default"
 
   # Play uses HikariCP as the default connection pool.  You can override
   # settings by changing the prototype:
@@ -368,8 +369,13 @@ db {
   #default.url = "jdbc:h2:mem:play"
   #default.username = sa
   #default.password = ""
+  workdb.driver = org.postgresql.Driver
+  workdb.url = "jdbc:postgresql://localhost:5432/postgres"
+  workdb.username = "maks"
+  workdb.password = "1234"
 
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+ebean.workdb = ["models.*"]
